[package]
name = "can-utils-rs"
version = "0.0.1"
edition = "2018"

[dependencies]
tungstenite = "0.11.0"
rusb = "0.5"
clap = "2.33.1"
hex = "0.4.2"
url = "2.1.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "isotpsend"
path = "src/isotpsend.rs"

[[bin]]
name = "isotprecv"
path = "src/isotprecv.rs"
